# lyra

./: .gitignore  CLAUDE.md  README.md  bottleneck_analysis.txt  bottleneck_visualization.py  install.sh  install_claude_code.sh  lyra-analyze  lyra-design-system.html  lyra-profile  lyra-setup  lyra-summarize  lyra_profiler.ipynb  profiler_analyzer.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
commands/: lyraAnalyze.md  lyraComputeMFU.md  lyraComputeThroughput.md  lyraCreateFunctionalTest.md  lyraIntegrateWANDB.md  lyraOptimize.md  lyraProfile.md  lyraRunTraining.md  lyraVisualize.md
src/lyra/: __init__.py  __main__.py  check.py  cli.py  core.py  history.py  llm.py  metrics.py  optimize.py  prompts.py  safe_profile.py  setup_env.py
src/lyra/commands/: __init__.py  analyze_cmd.py  check_cmd.py  common.py  llm_cmd.py  optimize_cmd.py  profile_cmd.py  setup_cmd.py  summarize_cmd.py  undo_cmd.py
tests/: test_check.py  test_core.py  test_history.py  test_llm.py  test_metrics.py  test_optimize.py  test_safe_profile.py  test_setup_env.py
